--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="./js/main.js" defer></script>
 		<script src="./js/script.js" defer></script>
 		<script src="./js/time.js" defer></script>
-		<script src="./js/index.js"></script>
+		<script src="./js/index.js" defer></script>
 		<title>Document</title>
 	</head>
 	<body></body>
